polish(api): finalize 4.0.0 public API and fix navigator/status issues
API freeze prep:
- Stamp every "@since TODO" as "@since 4.0.0"
- Document the compare-by-id equality contract on BuildWorldStatus and
  NavigatorCategory (the enum-era "==" no longer holds)
- Add NavigatorCategory#getStyledName() to match BuildWorldStatus
- Make WorldStatusRegistry#getStatus accept @Nullable, matching getCategory
- Remove the unused BuildWorldStatus#isVisibleInNavigator(); navigator
  visibility is decided by category membership
- Correct the isBuiltIn / getCategoryForWorld docs to match real behaviour

Fixes:
- StatusMenu: lay the status grid out row by row so a large status count can
  no longer overflow the inventory and throw
- NavigatorLayoutMenu: never hand out the settings slot as free, and don't
  strand a displaced category at slot -1
- Re-home a deleted category's folders to the default so they (and the worlds
  inside them) stay reachable
- Resolve navigator category heads off-thread instead of blocking the main
  thread on profile lookups
- PlaceholderAPI %status% keeps its colour again
- Derive custom-status permissions from the full id so two ids cannot collide
- Handle legacy hex colour formats when migrating status display names

Cleanup:
- Extract the duplicated slug generator to StringUtils#uniqueId
- Use getStyledName() at the category render sites

Adds the 4.0.0 CHANGELOG.